--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.16.1</version> <!-- Ajusta la versión según la última disponible -->
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6</version>
+        </dependency>
     </dependencies>
 </project>
